--- a/utalkBE/src/main/resources/application.properties
+++ b/utalkBE/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.datasource.driver=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:oracle
 spring.datasource.username=oracle
 spring.datasource.password=oracle
 spring.datasource.initsize=5
