--- a/utalkBE/pom.xml
+++ b/utalkBE/pom.xml
@@ -59,9 +59,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.oracle</groupId>
+            <groupId>com.oracle.ojdbc</groupId>
             <artifactId>ojdbc8</artifactId>
-            <version>12.1.0</version>
+            <version>19.3.0.0</version>
         </dependency>
 
 
@@ -128,4 +128,11 @@
             <version>1.11.3</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
 </project>
