--- a/utalkBE/src/main/resources/application.properties
+++ b/utalkBE/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 spring.datasource.driver=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:oracle
-spring.datasource.username=oracle
-spring.datasource.password=oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=proiect
+spring.datasource.password=proiect
 spring.datasource.initsize=5
 spring.datasource.maxidle=10
 spring.datasource.maxtotal=90
